# hiveboard

./: .gitignore  HOW_TO_RUN_IT.txt  LICENSE  README.md  config-dev.json  config-pn.json  config.example.json  full-system-audit-plan.md  hiveboard-insights-engine-spec.md  pyproject.toml
.claude/: settings.local.json
TO-DO/: AWS_API_GATEWAYS_SETUP.md  DEPLOYMENT_CHANGELOG.md  HIVEBOARD_OBSERVABILITY_GAPS.md  NamesOfAgentsInUI.txt  PHASE_1_4_AUDIT.md  PRODUCTION_MIGRATION_PLAN.md  hiveboard-insights-engine-spec-v2.md  new-view.txt
UI_UX_design/: hiveboard-dashboard-design-context.md  hiveboard-data-flow-analysis.md
backend/: __init__.py  alerting.py  app.py  db.py  middleware.py  storage_json.py  websocket.py
dashboard/: index.html
data/: agents.json  api_keys.json  events.json  llm_pricing.json  project_agents.json  projects.json  tenants.json
docs/: 0_HiveBoard-Context-Brief.md  1_HiveBoard_Event_Schema_v2.md  2_hiveboard-data-model-spec-v5.md  AWS_WEBSOCKET_SETUP_GUIDE.md  HiveBoard-AHA-Moments-Compendium.md  HiveBoard_HiveLoop_Product_Spec.docx  hiveboard-dashboard-v3-notes.md  hiveboard-dashboard-v3.html  hiveboard-v2.html  implementation-plan.md  insights-tab-spec.md  loopcore-hiveboard-observability-deep-dive.md  phase-c2-report.md  team1-audits-team2-results.md  team1-audits-team2.md  team1-full-codebase-audit.md  team1-phase1-implementation-report.md  team1_insights-tab-data-analysis.md  team2-audits-team1.md  team2-implementation-C1_6-Simulator.md  team2-implementation-plan.md
docs/WEBAPP/: home.html  (+4 more)
examples/: BRIGHTPATH_SIMULATOR_DESIGN.md  Running BrightPath Simulation.txt  brightpath.py  simulator.py
implementation_phases/: team_2_Phase_1.txt
sdk/: __init__.py  pyproject.toml
sdk/hiveloop/: __init__.py  _agent.py  _transport.py
shared/: enums.py  models.py  storage.py
src/: llm_client.py
src/sdk/: README.md  pyproject.toml
src/sdk/hiveloop/: __init__.py  _agent.py  _transport.py
src/sdk/hiveloop/contrib/: log_handler.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_contrib.py  test_convenience.py  test_core.py  test_heartbeat.py  test_integration.py  test_pruning.py  test_retention.py  test_storage.py  test_tracking.py  test_transport.py
user_manual/: INTEGRATION_GUIDE.md  hiveloop-user-manual-part3-instrumentation-guide.md  hiveloop-user-manual-part4-layer1-what-to-expect.md  hiveloop-user-manual-part5-layer2-rich-events.md  (+2 more)
(+121 files in other folders)
