[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveboard"
version = "0.1.0"
description = "Framework-agnostic observability platform for AI agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
sdk = [
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared*", "backend*", "sdk*", "dashboard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
