[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveloop"
version = "0.1.0"
description = "Lightweight observability SDK for AI agents"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0"]

[tool.setuptools.packages.find]
include = ["hiveloop*"]