[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveloop"
version = "0.1.0"
description = "Lightweight observability SDK for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0"]
keywords = ["ai", "agents", "observability", "monitoring", "llm", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://hiveboard.io"
Documentation = "https://docs.hiveboard.io"
Repository = "https://github.com/hiveboard/hiveloop"

[tool.setuptools.packages.find]
include = ["hiveloop*"]